# wayfinders

./: .gitignore  AGENTS.md  README.md  pyproject.toml  wf.toml.example
.beads/: issues.jsonl
.beads/export-state/: dbe8d39a9baa91b5.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CLI_SPEC.md  INSTALL.md  PROVENANCE.md  RENDER_SPEC.md  ROADMAP.md  SCHEMA.md  TIMELINE_IR.md  fold_map_template.md  ip_safety_checklist.md  style_guide.md
docs/jsonschema/: README.md
episodes/s01e01_map_forgot_roads/: dialogue.md  episode.yaml  shotlist.yaml
show/canon/: biomes.yaml  characters.yaml  fx.yaml  overlays.yaml  stats.yaml
show/prompts/: background.j2  cutout.j2
show/templates/: episode.yaml.j2  prompt_bg.txt.j2  prompt_char.txt.j2  prompt_foldmap.txt.j2  shotlist.yaml.j2
src/wayfinders_cli/: build.py  cache.py  canon.py  cli.py  io.py  placeholders.py  plan.py  reproducibility.py  scaffolding.py  schema.py  validate.py
src/wayfinders_cli/provenance/: __init__.py  bundle.py  manifest.py
src/wayfinders_cli/qc/: __init__.py  checker.py  report.py  rules.py
src/wayfinders_cli/render/: __init__.py  animatic_stub.py  audio.py  audio_config.py  compositor.py  ffmpeg.py  frames.py  ir.py  renderer.py  timeline.py  video.py
src/wayfinders_cli/templates/: README.md  README.md.j2  (+2 more)
tests/: test_audio.py  test_build.py  test_cache.py  test_compositor.py  test_gen_assets.py  test_prompting.py  test_provenance_bundle.py  test_provider_registry.py  test_qc.py  test_reproducibility.py  test_scaffolding.py  test_templates.py  test_validate.py  test_video.py
